# VS

./: .gitignore  install_MQTT.sh  install_mqtt_dep.sh
dashboard/: .gdb_history  Cargo.toml  build.rs  printers.conf
dashboard/blueprints/: bm.3dbp  lang.3dbp  modell.3dbp
dashboard/src/: main.rs
dashboard/src/msgif/: mod.rs
dashboard/src/printer_mgmt/: core.rs  mod.rs  print_order.rs  printer.rs  status_req.rs
dashboard/src/ui/: mod.rs  webserver.rs
dashboard/uitemplates/: error.html  mgmt_begin.html  mgmt_printer.html  page_begin.html  print.html  status.html  status_fab_begin.html  status_printer.html
doc/: mqtt_diag.graphml  rest_diag.graphml
mat/: Cargo.toml
mat/src/: main.rs
msgclient/: Cargo.toml
msgclient/src/: main.rs
panel/: Cargo.toml  modell.3dbp  modell.json
panel/src/: Netserver.rs  main.rs
panel/src/internals/: mod.rs  printerpart.rs  server.rs
panel/src/rest/: mod.rs  printer_rest.rs
prnthead/: Cargo.toml
prnthead/src/: main.rs
